<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="navigation_drawer_open" translatable="false">open</string>
    <string name="navigation_drawer_close" translatable="false">close</string>
    <string name="initial_setup" translatable="false">Initial Setup</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="location">Location</string>
    <string name="notification">Notification</string>
    <string name="ok">OK</string>
    <string name="my_preference" translatable="false">MyPreference</string>
    <string name="lat" translatable="false">lat</string>
    <string name="lon" translatable="false">lon</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cannot_fetch_location">we cannot fetch your location.</string>
    <string name="please_allow_weather_to_access_your_location">Please allow App to access your location.</string>
    <string name="allow">Allow</string>
    <string name="first_run" translatable="false">First Run</string>
    <string name="cloud">Cloud</string>
    <string name="ultra_violet">Ultra Violet</string>
    <string name="visibility">Visibility</string>
    <string name="humidity">Humidity</string>
    <string name="hpa" translatable="false">" hpa"</string>
    <string name="percentage">" %"</string>
    <string name="speed">" m/s"</string>
    <string name="vision">" m"</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="save">Save</string>
    <string name="unknown_location">Unknown location</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="mile_hour">Mile / Hour</string>
    <string name="meter_sec">Meter / Sec</string>
    <string name="temperature">Temperature</string>
    <string name="kelvin">K</string>
    <string name="fahrenheit">°F</string>
    <string name="celsius">°C</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="wind_speed">Wind Speed</string>


    <string name="lat_pref" translatable="false">lat</string>
    <string name="lon_pref" translatable="false">lon</string>
    <string name="gps_pref" translatable="false">GPS</string>
    <string name="map_pref" translatable="false">Map</string>
    <string name="location_pref" translatable="false">Location</string>
    <string name="notification_pref" translatable="false">Notification</string>
    <string name="language_pref" translatable="false">Language</string>
    <string name="english_pref" translatable="false">English</string>
    <string name="arabic_pref" translatable="false">Arabic</string>
    <string name="mile_hour_pref" translatable="false">Mile / Hour</string>
    <string name="meter_sec_pref" translatable="false">Meter / Sec</string>
    <string name="temperature_pref" translatable="false">Temperature</string>
    <string name="kelvin_pref" translatable="false">Kelvin</string>
    <string name="fahrenheit_pref" translatable="false">Fahrenheit</string>
    <string name="celsius_pref" translatable="false">Celsius</string>
    <string name="enable_pref" translatable="false">Enable</string>
    <string name="disable_pref" translatable="false">Disable</string>
    <string name="wind_speed_pref" translatable="false">Wind Speed</string>
    <string name="home">Home</string>
    <string name="alert">Alert</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="alarm">Alarm</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="no_alerts">No Alerts</string>
    <string name="no_places">No Places</string>
    <string name="delete">Delete</string>
    <string name="alarm_pref" translatable="false">alarm</string>
    <string name="confirmation">Confirmation !</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="added">Added</string>
    <string name="removed">removed</string>
    <string name="channel" translatable="false">weatherForecast</string>
    <string name="channel_id" translatable="false">3821</string>
    <string name="and_the_temperature_is">", and the temperature is"</string>
    <string name="message_worker" translatable="false">message</string>
    <string name="type_worker" translatable="false">type</string>
    <string name="id_worker" translatable="false">id</string>
    <string name="please_select_time_after_now">Please select Time after now</string>
    <string name="please_select_time_after_from_time">Please select Time after Start Time</string>
    <string name="no_internet">No internet</string>
    <string name="add">Add</string>
    <string name="saved">Saved</string>
    <string name="please_connect_to_internet_first_and_try_again_later">Please Connect to internet first and try again later.</string>
    <string name="please_enable_notification_from_settings_first">Please Enable Notifications from Settings first.</string>
    <string name="location_services_disabled">Location Services Disabled</string>
    <string name="please_enable_location_services_to_use_this_feature">Please enable location services to use this feature.</string>
    <string name="open_settings">Open Settings</string>
    <string name="enable_location">Enable Location</string>
    <string name="cancel">Cancel</string>
    <string name="get_from_maps">Get From Maps</string>
    <string name="select_item">Select Location</string>
</resources>