<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.view.SettingsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/location_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/language_card"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAlignment="center"
                android:background="@drawable/button_background"
                android:textSize="20sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/location_settings_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            app:layout_constraintEnd_toEndOf="@+id/location_card"
            app:layout_constraintStart_toStartOf="@+id/location_card"
            app:layout_constraintTop_toBottomOf="@+id/location_card">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RadioButton
                    android:id="@+id/gps_radio_button"
                    android:layout_width="wrap_content"
                    android:text="@string/gps"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/map_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/map"
                    android:layout_height="wrap_content"/>

            </RadioGroup>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/language_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/location_card"
            app:layout_constraintTop_toTopOf="@+id/location_card">

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textAlignment="center"
                android:background="@drawable/button_background"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/language_settings_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            app:layout_constraintEnd_toEndOf="@+id/language_card"
            app:layout_constraintStart_toStartOf="@+id/language_card"
            app:layout_constraintTop_toBottomOf="@+id/language_card">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RadioButton
                    android:id="@+id/english_radio_button"
                    android:layout_width="wrap_content"
                    android:text="@string/english"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/arabic_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/arabic"
                    android:layout_height="wrap_content"/>

            </RadioGroup>
        </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:id="@+id/temperature_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/location_settings_card"
            app:layout_constraintStart_toStartOf="@+id/location_settings_card"
            app:layout_constraintTop_toBottomOf="@+id/location_settings_card">

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textAlignment="center"
                android:background="@drawable/button_background"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/temperature_settings_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            app:layout_constraintEnd_toEndOf="@+id/temperature_card"
            app:layout_constraintStart_toStartOf="@+id/temperature_card"
            app:layout_constraintTop_toBottomOf="@+id/temperature_card">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RadioButton
                    android:id="@+id/celsius_radio_button"
                    android:layout_width="wrap_content"
                    android:text="@string/celsius"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/kelvin_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/kelvin"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/fahrenheit_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/fahrenheit"
                    android:layout_height="wrap_content"/>

            </RadioGroup>
        </androidx.cardview.widget.CardView>







        <androidx.cardview.widget.CardView
            android:id="@+id/wind_speed_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/language_settings_card"
            app:layout_constraintTop_toBottomOf="@+id/language_settings_card">

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textAlignment="center"
                android:background="@drawable/button_background"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/wind_speed_settings_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            app:layout_constraintEnd_toEndOf="@+id/wind_speed_card"
            app:layout_constraintStart_toStartOf="@+id/wind_speed_card"
            app:layout_constraintTop_toBottomOf="@+id/wind_speed_card">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RadioButton
                    android:id="@+id/meter_radio_button"
                    android:layout_width="wrap_content"
                    android:text="@string/meter_sec"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/mile_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/mile_hour"
                    android:layout_height="wrap_content"/>

            </RadioGroup>
        </androidx.cardview.widget.CardView>






        <androidx.cardview.widget.CardView
            android:id="@+id/notification_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/temperature_settings_card"
            app:layout_constraintStart_toStartOf="@+id/temperature_settings_card"
            app:layout_constraintTop_toBottomOf="@+id/temperature_settings_card">

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                android:textAlignment="center"
                android:background="@drawable/button_background"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/notification_settings_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            app:layout_constraintEnd_toEndOf="@+id/notification_card"
            app:layout_constraintStart_toStartOf="@+id/notification_card"
            app:layout_constraintTop_toBottomOf="@+id/notification_card">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RadioButton
                    android:id="@+id/enable_radio_button"
                    android:layout_width="wrap_content"
                    android:text="@string/enable"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/disable_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/disable"
                    android:layout_height="wrap_content"/>

            </RadioGroup>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>