<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ic_settings"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_settings_50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/initial_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/initial_setup"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/ic_settings"
            app:layout_constraintStart_toEndOf="@+id/ic_settings"
            app:layout_constraintTop_toTopOf="@+id/ic_settings" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/location"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/ic_settings"
            app:layout_constraintTop_toBottomOf="@+id/initial_setup" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/location_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/location_text">

            <RadioButton
                android:id="@+id/gps_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps" />

            <RadioButton
                android:id="@+id/map_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/map" />
        </RadioGroup>

        <!-- Notification Text -->
        <TextView
            android:id="@+id/notification_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/notification"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/ic_settings"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <!-- Notification Switch -->
        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/notification_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/notification_text" />

        <!-- OK Button -->
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_background"
            android:text="@string/ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
