<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".init.InitActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/permission_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="24dp"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/state_image"
                android:layout_width="58dp"
                android:layout_height="52dp"
                android:elevation="12dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cannot_fetch_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:elevation="12dp"
                android:fontFamily="@font/app"
                android:text="@string/cannot_fetch_location"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/state_image"
                app:layout_constraintTop_toTopOf="@+id/state_image" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:elevation="12dp"
                android:fontFamily="@font/app"
                android:text="@string/please_allow_weather_to_access_your_location"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/cannot_fetch_location"
                app:layout_constraintTop_toBottomOf="@+id/cannot_fetch_location" />

            <Button
                android:id="@+id/allow_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow"
                android:background="@drawable/button_background"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/cannot_fetch_location"
                app:layout_constraintTop_toBottomOf="@+id/description" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>