<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/from_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/to_card"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textAlignment="center"
                android:background="@drawable/button_background"
                android:textSize="20sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/from_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            app:layout_constraintEnd_toEndOf="@+id/from_card"
            app:layout_constraintStart_toStartOf="@+id/from_card"
            app:layout_constraintTop_toBottomOf="@+id/from_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/from_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="time"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/from_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="date"
                    android:textSize="16sp"
                    android:textAlignment="center" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/to_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="32dp"
            android:visibility="gone"
            app:cardElevation="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/from_card"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textAlignment="center"
                android:background="@drawable/button_background"
                android:textSize="20sp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/to_button"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="18dp"
            app:layout_constraintEnd_toEndOf="@+id/to_card"
            app:layout_constraintStart_toStartOf="@+id/to_card"
            app:layout_constraintTop_toBottomOf="@+id/to_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/to_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="time"
                    android:textSize="20sp"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/to_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="date"
                    android:textSize="16sp"
                    android:textAlignment="center" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/from_button">

            <RadioButton
                android:id="@+id/alarm_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/alarm" />

            <RadioButton
                android:id="@+id/notification_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/notification" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:background="@drawable/button_background"
            android:text="@string/save"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
